recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:2: error: illegal start of simple pattern
	var boolean existe = false
                           ^isMember:3: error: '=' expected but ';' found.
	for(i <- 0 to l.length-1)
^